# ondadb

./: .gitignore  AGENTS.md  BENCHMARK-RESULTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PERF-PARITY-fjall.md  PLAN-parts-and-tiers.md  PLAN-perf-gaps.md  README.md  SPADA-A5.md  index.html  m2ultra.html  results_matrix_linux.csv  results_matrix_m2ultra.csv
docs/: architecture.md  concurrency-and-safety.md  formats.md  parts-and-tiers.md  performance.md
src/: block.rs  bloom.rs  column_family.rs  compaction.rs  comparator.rs  compress.rs  config.rs  db.rs  encoding.rs  error.rs  format.rs  ingest.rs  iterator.rs  lib.rs  maintenance.rs  manifest.rs  memtable.rs  memtable_arena.rs  parts.rs  storage.rs  storage_s3.rs  txn.rs  unified.rs  util.rs  wal.rs
src/cache/: block.rs  file.rs  mod.rs
src/sst/: iter.rs  mod.rs  reader.rs  writer.rs
tests/: db.rs  derived_partitioning.rs  engine_regressions.rs  fjall_suite.rs  lock_release_on_drop.rs  maintenance.rs  parts.rs  read_your_writes.rs  s3_tier.rs  sst.rs  surrealkv_suite.rs  unified.rs
